Updated read me file to reflect specific client

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-(Beginnings of) a generic client application for ubicomp experiences and games.
+Non-generic client for Exploding Places
 
-Chris Greenhalgh, 2010-07-09
+Martin Flintham 15/07/10
